fix: json decode

--- a/WebView/Resources/index.html
+++ b/WebView/Resources/index.html
@@ -4,11 +4,11 @@
     </head>
     <body>
         <h1>Test</h1>
-        <a href="javascript:void(0)" onclick="sendMessage();">Run sendMessage</a>
+        <a href="javascript:void(0)" onclick="sendMessage1();">Run sendMessage1</a>
         <br><br>
-        <a href="javascript:void(0)" onclick="sendMessageParameters();">Run sendMessageParameters</a>
+        <a href="javascript:void(0)" onclick="sendMessage2();">Run sendMessage2</a>
         <br><br>
-        <a href="javascript:void(0)" onclick="sendParameters();">Run sendParameters</a>
+        <a href="javascript:void(0)" onclick="sendMessage3();">Run sendMessage3</a>
         <br><br>
         <a href="javascript:void(0)" onclick="sendJSON();">Run sendJSON</a>
         <br><br>
