--- a/WebView/Resources/index.html
+++ b/WebView/Resources/index.html
@@ -4,16 +4,10 @@
     </head>
     <body>
         <h1>Test</h1>
-        <a href="javascript:void(0)" onclick="sendMessage1();">Run sendMessage1</a>
-        <br><br>
-        <a href="javascript:void(0)" onclick="sendMessage2();">Run sendMessage2</a>
-        <br><br>
-        <a href="javascript:void(0)" onclick="sendMessage3();">Run sendMessage3</a>
+        <a href="javascript:void(0)" onclick="sendMessage();">Run sendMessage</a>
         <br><br>
         <a href="javascript:void(0)" onclick="sendJSON();">Run sendJSON</a>
         <br><br>
-        <a href="javascript:void(0)" onclick="sendJSONURL();">Run sendJSONURL</a>
-        <br><br>
-        <a href="javascript:void(0)" onclick="sendBase64();">Run sendBase64</a>
+        <a href="javascript:void(0)" onclick="sendURL();">Run sendURL</a>
     </body>
 </html>
